--- a/public/index.html
+++ b/public/index.html
@@ -74,8 +74,8 @@
     <h1>assignment14</h1>
     <p>Version 1.0.0</p>
 
-    <h3>OpenAPI spec: <a href="/openapi.json">/openapi.json</a></h3>
-    <h3>API Explorer: <a href="/explorer">/explorer</a></h3>
+    <h3>OpenAPI spec: <a href="http://localhost:3000/api/student">Get all student records</a></h3>
+    <h3>API Explorer: <a href="http://localhost:3000/api/student/bulk?_ids=1">Get specific student record</a></h3>
   </div>
 
   <footer class="power">
